still testing push vs Code

--- a/views/index.pug
+++ b/views/index.pug
@@ -8,6 +8,6 @@ html(lang='en')
         section#content
         footer
             p An app to help you study.
-            
+            p more test here
 
       
